<resources>
    <string name="app_name">MySamsung</string>
    <string name="app_name_persian">سامسونگ من</string>
    <string name="app_version">نسخه 1.0.4 (BETA)</string>
    <string name="title_suggest">پیشنهادات</string>
    <string name="coming_soon">به زودی</string>
    <string name="phone_support">گوشی شما از این قابلیت پشتیبانی نمی‌کند. لطفا از تنظیمات گوشی، تنظیم کنید.</string>
    <string name="phone_support2">گوشی شما از این قابلیت پشتیبانی نمی‌کند.</string>
    <string name="menu_channel">ارتباط با ما</string>
    <string name="menu_rate">امتیاز به برنامه</string>
    <string name="menu_share">اشتراک گذاری برنامه</string>
    <string name="menu_aboutUs">درباره سامسونگ من</string>
    <string name="menu_exit">خروج</string>
    <string name="home_start">شروع با:</string>
    <string name="home_all">همه‌گوشی‌ها</string>
    <string name="home_series">سری‌ها</string>
    <string name="home_year">سال ساخت</string>
    <string name="home_compare">مقایسه</string>
    <string name="home_customize">شخصی سازی</string>
    <string name="home_tip">ترفندها و نکات جذاب</string>
    <string name="home_about">درباره ما</string>
    <string name="home_test">تست گوشی</string>
    <string name="home_goodlock">برنامه GoodLock</string>
    <string name="home_goodlock_simple">Good Lock</string>
    <string name="home_lte">LTE Only</string>
    <string name="home_call">تماس جعلی</string>
    <string name="home_t1">گوشی که دنبالشی اینجاست</string>
    <string name="home_t2">پرکاربردها</string>
    <string name="home_t3">ابزارهای مخفی</string>
    <string name="app_search">جستجو</string>
    <string name="search_hint">جستجو کنید ...</string>
    <string name="series_title">سری ها</string>
    <string name="series_s">Galaxy S</string>
    <string name="series_z">Galaxy Z</string>
    <string name="series_note">Galaxy Note</string>
    <string name="series_a">Galaxy A</string>
    <string name="series_m">Galaxy M</string>
    <string name="series_f">Galaxy F</string>
    <string name="series_tab">Galaxy Tab</string>
    <string name="series_j">Galaxy J</string>
    <string name="series_s1">توضیحاتی درباره سری گوشی های سامسونگ</string>
    <string name="year_title">سال ساخت</string>
    <string name="year_2023">سال 2023</string>
    <string name="year_2022">سال 2022</string>
    <string name="year_2021">سال 2021</string>
    <string name="year_2020">سال 2020</string>
    <string name="year_2018">سال 2018</string>
    <string name="year_s1">پشتیبانی نرم افزاری سامسونگ چند سال است؟</string>
    <string name="phones_title">همه گوشی های سامسونگ</string>
    <string name="phones_zfold5">Galaxy Z Fold5</string>
    <string name="phones_zflip5">Galaxy Z Flip5</string>
    <string name="phones_a54">Galaxy A54 5G</string>
    <string name="phones_a34">Galaxy A34 5G</string>
    <string name="phones_s23ultra">Galaxy S23 Ultra</string>
    <string name="phones_s23plus">Galaxy S23 Plus</string>
    <string name="phones_s23">Galaxy S23</string>
    <string name="phones_zfold4">Galaxy Z Fold4</string>
    <string name="phones_zflip4">Galaxy Z Flip4</string>
    <string name="phones_zfold3">Galaxy Z Fold3</string>
    <string name="phones_zflip3">Galaxy Z Flip3</string>
    <string name="phones_a73">Galaxy A73 5G</string>
    <string name="phones_a53">Galaxy A53 5G</string>
    <string name="phones_a33">Galaxy A33 5G</string>
    <string name="phones_s22ultra">Galaxy S22 Ultra</string>
    <string name="phones_s22plus">Galaxy S22 Plus</string>
    <string name="phones_s22">Galaxy S22</string>
    <string name="phones_s21fe">Galaxy S21 FE</string>
    <string name="phones_a52s">Galaxy A52s 5G</string>
    <string name="phones_note20ultra">Galaxy Note20 Ultra</string>
    <string name="phones_note20_5g">Galaxy Note20 5G</string>
    <string name="phones_note20">Galaxy Note20</string>
    <string name="phones_m62">Galaxy M62</string>
    <string name="phones_m53">Galaxy M53</string>
    <string name="phones_m33">Galaxy M33</string>
    <string name="phones_f23">Galaxy F23</string>
    <string name="phones_f42">Galaxy F42</string>
    <string name="phones_f13">Galaxy F13</string>
    <string name="phones_tab_s8ultra">Galaxy Tab S8 Ultra</string>
    <string name="phones_tab_s8plus">Galaxy Tab S8 Plus</string>
    <string name="phones_tab_s8">Galaxy Tab S8</string>
    <string name="phones_j8">Galaxy J8</string>
    <string name="phones_j6">Galaxy J6</string>
    <string name="phones_j4">Galaxy J4</string>
    <string name="phones_des_zfold5">بهترین پرچمدار تاشدنی 2022</string>
    <string name="phones_des_zflip5">پرچمدار تاشدنی کوچک</string>
    <string name="phones_des_a54">قدرتمندترین میانرده 2023</string>
    <string name="phones_des_a34">میانرده ای قدرتمند</string>
    <string name="phones_des_s23ultra">بهترین پرچمدار</string>
    <string name="phones_des_s23plus">پرچمدار</string>
    <string name="phones_des_s23">پرچمدار</string>
    <string name="phones_des_zfold4">بهترین پرچمدار تاشدنی 2022</string>
    <string name="phones_des_zflip4">پرچمدار تاشدنی کوچک</string>
    <string name="phones_des_zfold3">بهترین پرچمدار تاشدنی 2021</string>
    <string name="phones_des_zflip3">پرچمدار تاشدنی کوچک</string>
    <string name="phones_des_a73">قدرتمندترین میانرده 2022</string>
    <string name="phones_des_a53">میانرده ای قدرتمند</string>
    <string name="phones_des_a33">میانرده ای قدرتمند</string>
    <string name="phones_des_s22ultra">بهترین پرچمدار 2022</string>
    <string name="phones_des_s22plus">پرچمدار 2022</string>
    <string name="phones_des_s22">پرچمدار 2022</string>
    <string name="phones_des_s21fe">پرچمدار اقتصادی</string>
    <string name="phones_des_a52s">قدرتمندترین میانرده 2021</string>
    <string name="phones_des_note20ultra">درحد پرچمدار</string>
    <string name="phones_des_note20_5g">درحد پرچمدار</string>
    <string name="phones_des_note20">درحد پرچمدار</string>
    <string name="phones_des_m62">به صرفه</string>
    <string name="phones_des_m53">به صرفه</string>
    <string name="phones_des_m33">به صرفه</string>
    <string name="phones_des_f23">اقتصادی</string>
    <string name="phones_des_f42">اقتصادی</string>
    <string name="phones_des_f13">اقتصادی</string>
    <string name="phones_des_tab_s8ultra">تبلت</string>
    <string name="phones_des_tab_s8plus">تبلت</string>
    <string name="phones_des_tab_s8">تبلت</string>
    <string name="phones_des_j8">اقتصادی</string>
    <string name="phones_des_j6">اقتصادی</string>
    <string name="phones_des_j4">اقتصادی</string>
    <string name="phones_s1">تنظیمات</string>
    <string name="phones_s2">جستجو</string>
    <string name="about_b1">ارتباط با ما</string>
    <string name="about_b2">امتیاز به برنامه</string>
    <string name="about_b3">اشتراک گذاری برنامه</string>
    <string name="about_t">حمایت از ما</string>
    <string name="about_t2">(:</string>
    <string name="about_tx1">ساخته شده توسط محمد حسین حمیدی</string>
    <string name="about_tx2">Copyright © 1401-1402 MHH Releases</string>
    <string name="about_tx3">7 Bahman 1402 Released (BETA)</string>
    <string name="about_tx4">تمامی محتوای موجود در این برنامه متعلق به تیم (سامسونگ من) می‌باشد</string>
    <string name="ertebat_title">ارتباط با ما</string>
    <string name="ertebat_b1">ایمیل</string>
    <string name="ertebat_b2">وبلاگ</string>
    <string name="ertebat_b3">تلگرام</string>
    <string name="ertebat_b4">اینستاگرام</string>
    <string name="ertebat_b5">ایتا</string>
    <string name="ertebat_b6">آپارات</string>
    <string name="ertebat_b7">بازار</string>
    <string name="tips_title">ترفندها و نکات جذاب</string>
    <string name="tips_titr">تو این بخش میتونی ترفندها و نکاتی رو پیدا کنی که هم جذاب هستن هم کاربردی ...</string>
    <string name="tips_t1">توضیحاتی درباره سری گوشی های سامسونگ</string>
    <string name="tips_t2">پشتیبانی نرم افزاری سامسونگ چند سال است؟</string>
    <string name="tips_t3">ترفند های اندروید 13 \n OneUi 5</string>
    <string name="tips_t4">جزئیات سری Z سامسونگ \n (گوشی های تاشو)</string>
    <string name="tips_t5">جزئیات سری Note سامسونگ \n (توقف تولید)</string>
    <string name="tips_t6">جزئیات سری S سامسونگ \n (گوشی پرچمدار)</string>
    <string name="tips_t7">جزئیات سری A سامسونگ \n (میانرده ای قدرتمند)</string>
    <string name="tips_t8">جزئیات سری M سامسونگ \n (میانرده‌ی اقتصادی)</string>
    <string name="tips_t9">جزئیات سری F سامسونگ \n (گوشی‌های به صرفه)</string>
    <string name="tips_t10">جزئیات سری Tab سامسونگ \n (تبلت)</string>
    <string name="tips_t11">جزئیات سری J سامسونگ \n (توقف تولید)</string>
    <string name="tips_t12">پردازنده اگزینوس یا اسنپدراگون؟</string>
    <string name="customize_title">شخصی سازی</string>
    <string name="customize_titr">تو این بخش میتونی ظاهر گوشیت رو هر طور دوست داری تغییر بدی ...</string>
    <string name="customize_t1">دوست داری ظاهر گوشیت مثل یه گوشی دیگه باشه؟</string>
    <string name="customize_t2">روش های شخصی سازی گوشی سامسونگ</string>
    <string name="customize_t3">معرفی برنامه های شخصی سازی گوشی</string>
    <string name="customize_t4">قابلیت های مخفی گوشی سامسونگ</string>
    <string name="goodlock_title">Good Lock</string>
    <string name="goodlock_detail">جزئیات</string>
    <string name="goodlock_home_download">GalaxyStore</string>
    <string name="goodlock_home_apkmirror">APKMirror</string>
    <string name="goodlock_home_mobile">موبایل روز</string>
    <string name="goodlock_guide2">راهنمایی</string>
    <string name="goodlock_guide">درباره GoodLock</string>
    <string name="goodlock_titr1">Unit</string>
    <string name="goodlock_titr2">Family</string>
    <string name="goodlock_titr3">Guardians</string>
    <string name="goodlock_tv1">LockStar</string>
    <string name="goodlock_t1">ساخت سبک جدید صفحه قفل و صفحه همیشه روشن</string>
    <string name="goodlock_tv2">QuickStar (requires Theme Park)</string>
    <string name="goodlock_t2">طراحی نوار تنظیمات سریع را جدید کنید</string>
    <string name="goodlock_tv3">Routines+</string>
    <string name="goodlock_t3">ویژگی های مختلفی به Bixby اضافه شده است. به شما کمک می کند که کارهای روزمره را سریع تر انجام دهید</string>
    <string name="goodlock_tv4">ClockFace</string>
    <string name="goodlock_t4">می‌توانید سبک های مختلف ساعت را روی صفحه قفل و صفحه همیشه روشن تنظیم کنید و آنها را به سبک خود شخصی سازی کنید</string>
    <string name="goodlock_tv5">MultiStar</string>
    <string name="goodlock_t5">حالت چند پنجره ای بهتری را تجربه کنید</string>
    <string name="goodlock_tv6">NavStar</string>
    <string name="goodlock_t6">به راحتی نوار ناوبری و سبک های مختلف را مدیریت کنید</string>
    <string name="goodlock_tv7">NiceShot</string>
    <string name="goodlock_t7">از صفحه گوشی راحت تر عکس و فیلم بگیرید</string>
    <string name="goodlock_tv8">Home Up</string>
    <string name="goodlock_t8">از بهتر کردن تجربه One Ui لذت ببرید</string>
    <string name="goodlock_tv9">NotiStar</string>
    <string name="goodlock_t9">تاریخچه اعلان ها را به سادگی مدیریت کنید</string>
    <string name="goodlock_tv10">RegiStar (Android +13)</string>
    <string name="goodlock_t10">چینش تنظیمات را تغییر دهید. کلیدهای کناری را مدیریت کنید. روش هایی برای راه اندازی سریع ویژگی های مفید ایجاد کنید</string>
    <string name="goodlock_tv11">Theme Park</string>
    <string name="goodlock_t11">به راحتی و به سرعت تم خود را بسازید و آنها را اعمال کنید</string>
    <string name="goodlock_tv12">Nice Catch</string>
    <string name="goodlock_t12">آیا تا به حال شده است که گوشی شما بلرزد اما اعلانی دریافت نکرده باشید؟ در این برنامه میتوانید علت اتفاقاتی مانند لرزش یا روشن شدن صفحه نمایش را ببینید</string>
    <string name="goodlock_tv13">One Hand Operation +</string>
    <string name="goodlock_t13">به راحتی از گوشی یا تبلت خود با انگشت شست استفاده کنید</string>
    <string name="goodlock_tv14">Sound Assistant</string>
    <string name="goodlock_t14">تنظیمات سیستم صوتی را گسترش داده و به راحتی افزایش دهید</string>
    <string name="goodlock_tv15">Wonderland</string>
    <string name="compare_phone_title">کدوم گوشی رو میخای مقایسه کنی؟</string>
</resources>