<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".views.Compare_phone_activity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ctr_bg">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            style="@style/AppbarTitle2">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                style="@style/CollapsingToolbarLayout3"
                app:title="Title">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/Toolbar" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/phone_list"
            style="@style/NestedScrollView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_text"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/search_hint"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/ph106"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_zfold5" />

                <Button
                    android:id="@+id/ph105"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_zflip5" />

                <Button
                    android:id="@+id/ph104"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_a54" />

                <Button
                    android:id="@+id/ph103"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_a34" />

                <Button
                    android:id="@+id/ph102"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_s23ultra" />

                <Button
                    android:id="@+id/ph101"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_s23plus" />

                <Button
                    android:id="@+id/ph100"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_s23" />

                <Button
                    android:id="@+id/ph1"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phones_zfold4" />

                <Button
                    android:id="@+id/ph2"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_zflip4" />

                <Button
                    android:id="@+id/ph3"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_a73" />

                <Button
                    android:id="@+id/ph4"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_a53" />

                <Button
                    android:id="@+id/ph5"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_a33" />

                <Button
                    android:id="@+id/ph6"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_s22ultra" />

                <Button
                    android:id="@+id/ph7"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_s22plus" />

                <Button
                    android:id="@+id/ph8"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_s22" />

                <Button
                    android:id="@+id/ph9"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_s21fe" />

                <Button
                    android:id="@+id/ph10"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_a52s" />

                <Button
                    android:id="@+id/ph11"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_note20ultra" />

                <Button
                    android:id="@+id/ph12"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_note20_5g" />

                <Button
                    android:id="@+id/ph13"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_note20" />

                <Button
                    android:id="@+id/ph14"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_zfold3" />

                <Button
                    android:id="@+id/ph15"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_zflip3" />

                <Button
                    android:id="@+id/ph16"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_m53" />

                <Button
                    android:id="@+id/ph17"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_m62" />

                <Button
                    android:id="@+id/ph18"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_m33" />

                <Button
                    android:id="@+id/ph19"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_f23" />

                <Button
                    android:id="@+id/ph20"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_f42" />

                <Button
                    android:id="@+id/ph21"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_f13" />

                <Button
                    android:id="@+id/ph22"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_tab_s8ultra" />

                <Button
                    android:id="@+id/ph23"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_tab_s8plus" />

                <Button
                    android:id="@+id/ph24"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_tab_s8" />

                <Button
                    android:id="@+id/ph25"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_j8" />

                <Button
                    android:id="@+id/ph26"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phones_j6" />

                <Button
                    android:id="@+id/ph27"
                    style="@style/MyButton5"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/phones_j4" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>